src/static/admin/css/admin.css
/* ... */
.thread-callout h3 {
    font-size: 1.3rem;
}

.thread-callout p {
    font-size: 0.8rem;
    margin-bottom: 0;
}

.thread-box {
    height: 100%;
}

.thread-avatar {
    width: 3.5rem;
}

.avatar-column {
    padding-left: 0;
}

.thread-dark {
    background-color: rgb(68,71,83);
    color: white !important;
}

.thread-dark .subheader {
    color: white;
}

.thread-dark a {
    color: white;
}

.thread-box-left {
    padding-right: 0;
}

.thread-box-right {
    padding-left: 0;
}

.post-callout {
    padding:10px;
    border-radius: 5px;
    color: white;
    margin-bottom: 10px;
}

.post-user-callout {
    background-color: rgb(148,194,237);
}

.post-other-callout {
    background-color: rgb(134,187,113)
}

.post-callout .subheader{
    color: white;
}

.post-callout p {
    margin-bottom: 2px;
}

.post-callout small {
    font-size: 0.8rem;
}

.thread-inner {
    max-height: 500px;
    overflow-x: hidden;
    overflow-y: scroll;
}

.post-button {
    height: 100%;
}

.post-callout blockquote, blockquote p {
    line-height: 1.6;
    color: white;
}

.post-callout blockquote {
    margin: 0 0 1rem;
    padding: 0 1rem 0 1rem;
    border-left: 2px solid white;
}
.no-pad td {
    padding: 0.1rem;
}

.no-bottom-margin {
    margin-bottom: 0 !important;
}

.no-top-margin {
    margin-top: 0;
}

.dont-break-out {
  word-wrap: break-word;
  overflow-wrap: break-word;
}

.fixed-table {
    table-layout: fixed;
}

<!-- Glossing -->
ol {
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 40px;
}

ol ol {
    margin-block-start: 0px;
    margin-block-end: 0px;
}

ol.gloss-sentence {
    display: inline !important;
    padding: 0;
    margin: 0;
    list-style: none;
}

.gloss-item {
    overflow: auto;
}

.gloss-sentence li {
    padding-left: 4px !important;
    padding-bottom: 2px;

}

.gloss-sentence ol {
    list-style: none !important;
}

ol.gloss-word {
    padding-right: .5em !important;
    padding-top: 0 !important;
    padding-bottom: 0 !important;
    margin-bottom: 2px !important;
    background: white !important;
    display: inline-block !important;
    margin-inline-start: 0 !important;
}

.gloss-first {
  padding-left: 0 !important;
}

.gloss-header {
    float: left;
    display: flex;
    min-width: 40px;
}

.gloss-wrapper {
    overflow: auto;
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 0;
}

.lang-tabs {
    margin-bottom: 15px;
}

.lang-tab {
    font-size: 0.8rem;
}

.lang-tab :hover {
    text-decoration: rgb(64, 69, 84) underline;
    text-underline-offset: 5px;
    text-decoration-thickness: 3px;
    cursor: pointer;
}

.lang-tab-active {
    text-decoration: rgb(64, 69, 84) underline;
    text-underline-offset: 5px;
    text-decoration-thickness: 3px;
}

.group-settings .title-area h2 {
    margin-top: 25px;
    font-size: 1rem;
}


.title-area .button {
    font-size: 0.9rem;
    margin-top: -5px;
}

button.expanded{
    width: 100%;
    text-align: left;
}

ul.actions li button {
    cursor: pointer;
}

ul.menu {
    font-weight: 400;
}

.wrap-long-text{
    word-wrap: anywhere;
}

.spacer-top-20 {
 margin-top: 20px;
}

#review_controls {
    padding-bottom: 20px;
}

.facet {
    max-height: 200px;
    overflow-y: auto;
    margin-bottom: 20px;
}

.bg-white {
    background-color: white;
}

.hijacked-warning {
  background-size: 50px 50px;
  background-color: #ffe761;
  color: #000;
  background-image: -webkit-linear-gradient(-45deg, rgba(0, 0, 0, .04) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, .04) 50%, rgba(0, 0, 0, .04) 75%, transparent 75%, transparent);
  background-image: -moz-linear-gradient(-45deg, rgba(0, 0, 0, .04) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, .04) 50%, rgba(0, 0, 0, .04) 75%, transparent 75%, transparent);
  background-image: linear-gradient(135deg, rgba(0, 0, 0, .04) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, .04) 50%, rgba(0, 0, 0, .04) 75%, transparent 75%, transparent);
}

.hijacked-warning-default {
  z-index: 1000000;
  font-weight: 600;
  text-align: center;
  position:fixed;
  min-height: 50px;
  height: auto;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  padding: 5px 7px;
  border-bottom: 2px solid #ae9e49;
  font-size: 12px;
  font-family: sans-serif;
}
#hijacked-warning-wrapper::after {
    height: 50px;
    content: "";
    display: block;
}

.hijacked-warning-bootstrap {
  margin-bottom:0;
}

.django-hijack-button-default {
	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
	box-shadow:inset 0px 1px 0px 0px #ffffff;
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
	background:-moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
	background:-webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
	background:-o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
	background:-ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
	background-color:#ffffff;
	-moz-border-radius:6px;
	-webkit-border-radius:6px;
	border-radius:6px;
	border:1px solid #dcdcdc;
	display:inline-block;
	cursor:pointer;
	color:#666666;
	font-family:Arial;
	font-size:11px;
	font-weight:bold;
	padding:3px 12px;
	text-decoration:none;
	text-shadow:0px 1px 0px #ffffff;
}
/* ... */

